@@ -1255,8 +1255,8 @@ $wgMessageStructure = array(
 		'sharedupload-desc-there',
 		'sharedupload-desc-here',
 		'shareddescriptionfollows',
-		'noimage',
-		'noimage-linktext',
+		'filepage-nofile',
+		'filepage-nofile-link',
 		'uploadnewversion-linktext',
 		'shared-repo-from',
 		'shared-repo',
@@ -1925,8 +1925,6 @@ $wgMessageStructure = array(
 		'movepagetext',
 		'movepagetalktext',
 		'movearticle',
-		'movenologin',
-		'movenologintext',
 		'movenotallowed',
 		'movenotallowedfile',
 		'cant-move-user-page',
